--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -1,7 +1,61 @@
 @import url('global.css');
 @import url('partials/header.css');
 @import url('partials/footer.css');
-@import url('partials/jumbotron.css');
+
+/* hero section */
+.hero__jumbotron {
+    padding: 20vh 16vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(0, 0, 0, .24);
+    background-image: url('../img/gedung3.webp');
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+
+.hero__jumbotron::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, .32);
+}
+
+.hero__title {
+    font-size: 2em;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: white;
+    z-index: 11;
+}
+
+@media screen and (min-width: 768px) {
+    .hero__title {
+        font-size: 2.5em;
+    }
+}
+
+.hero__detail {
+    margin-top: 1.5rem;
+    padding: 0.75rem 2rem;
+    width: 300px;
+    border: none;
+    border-radius: 0;
+    background-color: var(--orange-color);
+    color: white;
+    text-transform: uppercase;
+    cursor: pointer;
+    z-index: 11;
+}
+
+.hero__detail:hover {
+    background: var(--orange-color-hover);
+}
 
 /* about */
 .about {
