--- a/assets/style/partials/header.css
+++ b/assets/style/partials/header.css
@@ -1,4 +1,3 @@
-/* header */
 header {
     justify-content: space-between;
     padding: 1rem 2rem 1rem 1.5rem;
@@ -14,8 +13,52 @@ a.logo {
 }
 
 .mobile__version i {
-    font-size: 1.75em;
+    font-size: 1.65em;
     color: var(--orange-color);
+}
+
+.navigation {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    background: white;
+    top: -100%;left: 0;right: 0;
+    z-index: 12;
+    transition: 0.3s;
+}
+
+.navigation i {
+    margin: 1.5rem 2rem 0 0;
+    align-self: flex-end;
+}
+
+.navigation nav {
+    width: 100%;
+}
+
+.navigation ul {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 0.75rem;
+}
+
+.navigation ul a {
+    text-align: center;
+    display: inline-block;
+    width: 100%;
+    padding: 1.25rem;
+    border-radius: 0.5rem;
+}
+
+.reservation__btn-mobile {
+    padding: 1.5rem;
+    width: 100%;
+    border-radius: 0;
+    border: none;
+    background: var(--orange-color);
+    color: white;
+    cursor: pointer;
 }
 
 @media screen and (min-width: 992px) {
@@ -55,4 +98,3 @@ a.logo {
         background: var(--orange-color-hover);
     }
 }
-
