--- a/assets/style/history.css
+++ b/assets/style/history.css
@@ -17,6 +17,9 @@ h3.dashboard__title {
 }
 
 .dashboard__articles {
+    display: flex;
+    flex-direction: row;
+
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
