--- a/assets/style/partials/footer.css
+++ b/assets/style/partials/footer.css
@@ -1,4 +1,3 @@
-/* footer */
 footer {
     background-color: var(--donker-blue);
     color: white;
@@ -58,6 +57,10 @@ footer a {
 }
 
 .social__media {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
     margin-top: 2.5rem;
     gap: 1rem;
 }
